Fixed #11415, vertical scrollbar was visible in annotation popup.

--- a/css/annotations/popup.scss
+++ b/css/annotations/popup.scss
@@ -11,6 +11,7 @@ $button-hover-color: #e6ebf5;
   height: 40px;
   padding-right: 40px;
   width: auto;
+  overflow: hidden;
   min-width: 0;
 }
 
